--- a/sl/statistics/statistics.vcxproj.filters
+++ b/sl/statistics/statistics.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="statistics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\common\item.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
