--- a/sl/generator/generator.vcxproj
+++ b/sl/generator/generator.vcxproj
@@ -114,6 +114,9 @@
       <ExecutionDescription>Rcc'ing %(Identity)...</ExecutionDescription>
       <OutputFile>.\GeneratedFiles\qrc_%(Filename).cpp</OutputFile>
     </QtRcc>
+    <PreBuildEvent>
+      <Command>call .\locale\translate.bat</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Generator.cpp" />
