--- a/sl/generator/generator.vcxproj.filters
+++ b/sl/generator/generator.vcxproj.filters
@@ -39,9 +39,18 @@
     <ClCompile Include="Generator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Enumerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FunctorExecutionForwarder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Generator.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="FunctorExecutionForwarder.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
@@ -62,5 +71,13 @@
     <None Include="locale\ru_RU.qm">
       <Filter>Resource Files\qm</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Enumerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneratorHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
