--- a/sl/generator/generator.vcxproj
+++ b/sl/generator/generator.vcxproj
@@ -53,7 +53,7 @@
     <ClCompile>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <PreprocessorDefinitions>UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;$(QTDIR)\include\QtWinExtras;.\..\Common</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\GeneratedFiles;.;C:\Qt\5.10.1\msvc2017_64\include;.\GeneratedFiles\$(ConfigurationName);C:\Qt\5.10.1\msvc2017_64\include\QtCore;C:\Qt\5.10.1\msvc2017_64\include\QtGui;C:\Qt\5.10.1\msvc2017_64\include\QtANGLE;C:\Qt\5.10.1\msvc2017_64\include\QtWidgets;C:\Qt\5.10.1\msvc2017_64\include\QtWinExtras;.\..\Common</AdditionalIncludeDirectories>
       <Optimization>Disabled</Optimization>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -62,14 +62,14 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
-      <AdditionalLibraryDirectories>$(QTDIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Qt\5.10.1\msvc2017_64\lib;C:\Qt\5.10.1\msvc2017_64\plugins\platforms;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>qtmaind.lib;Qt5Cored.lib;Qt5Guid.lib;Qt5Widgetsd.lib;Qt5WinExtrasd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>qtmaind.lib;Qt5CoreD.lib;Qt5GuiD.lib;Qt5WidgetsD.lib;Qt5WinExtrasD.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <QtMoc>
       <OutputFile>.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</OutputFile>
       <ExecutionDescription>Moc'ing %(Identity)...</ExecutionDescription>
-      <IncludePath>.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;$(QTDIR)\include\QtWinExtras;.\..\Common</IncludePath>
+      <IncludePath>.\GeneratedFiles;.;C:\Qt\5.10.1\msvc2017_64\include;.\GeneratedFiles\$(ConfigurationName);C:\Qt\5.10.1\msvc2017_64\include\QtCore;C:\Qt\5.10.1\msvc2017_64\include\QtGui;C:\Qt\5.10.1\msvc2017_64\include\QtANGLE;C:\Qt\5.10.1\msvc2017_64\include\QtWidgets;C:\Qt\5.10.1\msvc2017_64\include\QtWinExtras;.\..\Common</IncludePath>
       <Define>UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</Define>
     </QtMoc>
     <QtUic>
